--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
         "stdlib.h": "c",
         "stdbool.h": "c",
         "buffers.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
