--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
         "config_zx.h": "c",
         "stdlib.h": "c",
         "stdbool.h": "c",
-        "buffers.h": "c"
+        "buffers.h": "c",
+        "errno.h": "c",
+        "z80.h": "c"
     }
 }
